<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/edit_contact_image"
            app:srcCompat="@drawable/ic_person" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <ImageView
                    android:layout_width="24dp"
                    android:padding="3dip" />

                <EditText
                    android:id="@+id/firstName"
                    android:gravity="start"
                    android:padding="3dip"
                    android:hint="@string/firstName"/>
            </TableRow>

            <TableRow>
                <ImageView
                    android:padding="3dip" />

                <EditText
                    android:id="@+id/LastName"
                    android:gravity="start"
                    android:padding="3dip"
                    android:hint="@string/lastName"/>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/email_icon"
                    android:padding="3dip"
                    app:srcCompat="@drawable/ic_email" />

                <EditText
                    android:id="@+id/email"
                    android:gravity="start"
                    android:padding="3dip"
                    android:hint="@string/email"/>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/phone_icon"
                    android:padding="3dip"
                    app:srcCompat="@drawable/ic_call" />

                <EditText
                    android:id="@+id/phone"
                    android:gravity="start"
                    android:padding="3dip"
                    android:hint="@string/phone"/>
            </TableRow>

            <TableRow>

                <ImageView
                    android:id="@+id/favorite_icon"
                    android:padding="3dip"
                    app:srcCompat="@drawable/ic_favorites" />

                <Switch
                    android:id="@+id/favorite"
                    android:gravity="start"
                    android:padding="3dip"
                    android:text="@string/favorite" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>